# Vibe-Connect

./: .dockerignore  .env.example  .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  CLAUDE.md  LICENSE  README.md  package.json  tsconfig.base.json  vibe-connect-build-plan.md  vibe-connect-droplet-addendum.md  vibe-connect-invite-client-mockup.html  vibe-connect-phase-24-build-plan.md  vibe-connect-phase-26-build-plan.md  vibe-connect-spec-client-vault.md  vibe-connect-spec-invite-client.md  vibe-distribution-plan.md
.appliance/: manifest.json
.github/workflows/: ci.yml  release.yml
_rc1/: Vibe Connect_0.1.0_x64_en-US.msi
apps/desktop/: package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/onboarding/: index.html  main.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: .gitkeep  icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/intake/: index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
apps/intake/public/: manifest.webmanifest  sw.js
apps/intake/src/: App.tsx  api.ts  jscanify.d.ts  main.tsx  styles.css
apps/portal/: index.html  package.json  tailwind.config.cjs  vite.config.ts
apps/portal/public/: manifest.webmanifest  sw.js
apps/server/: .env.test  knexfile.cjs  package.json  tsconfig.json  vitest.config.ts
apps/web/: index.html  package.json  tailwind.config.cjs  vite.config.ts
docs/: ADR-028-server-side-encryption-rationale.md  CLAUDE_CODE_KICKOFF.md  PHASE_28_ADDENDUM.md  QUESTIONS.md  SECURITY_REVIEW.md  SECURITY_REVIEW_SCOPE.md  THREAT_MODEL.md  tls.md  vibe-connect-compatibility-addendum.md
docs/ops/: ATTACHMENT_ORPHAN_CLEANUP.md  ATTACHMENT_STORAGE.md  BACKUP_RECOVERY.md  CLAMAV.md  DESKTOP.md  EMAIL_DNS.md  FEEDBACK_TRACKER.md  FIREWALL.md  HARDWARE_SIZING.md  INTAKE.md  INTAKE_FIRM_ADMIN.md  MESSAGE_LIFECYCLE.md  OIDC.md  PERSISTENCE.md  RECOVERY_SHAMIR.md  REQUESTS.md  REQUESTS_CLIENT.md  ROLLOUT.md  SESSION_SECRET_ROTATION.md  SLA.md  SMS_PROVIDERS.md  SMTP.md  TESTING.md  UPDATE_SIGNING.md  VAULT.md  VAULT_CLIENT.md
infra/docker/: Dockerfile  docker-compose.grouped.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  init-db.sql  nginx.conf
(+277 files in other folders)
