[package]
name = "vibe-connect-desktop"
version = "0.1.0"
description = "Vibe Connect desktop shell"
authors = ["Kisaes"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-autostart = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-notification = "2.0"
# Shell opener — used to launch the staff's intake URL in the OS default
# browser from the My Intake Page card. Without this the in-webview
# `target="_blank"` either replaces the appliance webview or silently no-ops.
# The IPC surface is opt-in: only the `open` command is allowed and the
# scope in capabilities/default.json restricts it to https:// URLs.
tauri-plugin-shell = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# URL parsing used by main.rs for the appliance URL guards. Tauri re-exports
# `url::Url` as `tauri::Url`, but pinning the dep directly is more robust to
# Tauri internal-API moves.
url = "2"

[features]
# this feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
